deploy/gke/staging/patches/httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  hostnames:
    - api.staging.streamhub.com
