deploy/gke/staging/patches/httproute-bo-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bo-api
spec:
  hostnames:
    - admin.staging.streamhub.com
