deploy/gke/staging/patches/httproute-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
spec:
  hostnames:
    - api.staging.streamhub.com
    - admin.staging.streamhub.com
    - web.staging.streamhub.com
