deploy/gke/staging/patches/httproute-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
spec:
  hostnames:
    - web.staging.streamhub.com
